# demiDM

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  test_pam.c  test_pam.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/images/: README.md
pam/: demidm-test.pam  demidm.pam
src/: errors.rs  events.rs  main.rs  tty.rs
src/auth/: mod.rs  pam_worker.rs  session.rs
src/graphics/: handle.rs  mod.rs  scaler.rs
src/graphics/backend/: ascii_art.rs  framebuffer.rs  kitty.rs  mod.rs  ueberzugpp.rs
src/input/: keybinds.rs  mod.rs  poller.rs
src/lua_runtime/: config.rs  hook_registry.rs  mod.rs
src/lua_runtime/api/: background.rs  hooks.rs  login_box.rs  mod.rs  theme.rs  widgets.rs
src/renderer/: login_box.rs  mod.rs  theme.rs  widgets.rs
src/state/: app_state.rs  input_field.rs  mod.rs
src/widget/: mod.rs
src/widget_runner/: mod.rs
